# akd-ext

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  cmr-care-hitl.py  file_attachment.ipynb  pyproject.toml  testing_instruction.md
akd_ext/: observability.py  structures.py  testing_instruction.md
akd_ext/agents/: __init__.py  _base.py  _mixins.py  _openai_base_agent.py  astro_search_care.py  cmr_care.py  cmr_care_agent.py  cmr_care_pydantic.py  code_search_care.py  gap.py  ieso.worldview.py  ieso_care.py  image_analyzer.py  pds_search_care.py
akd_ext/artifacts/: __init__.py  _base.py  utils.py
akd_ext/mcp/: converter.py  server.py
akd_ext/tools/: __init__.py  _helpers.py  ads.py  ascl.py  collections_rag.py  eonet.py  get_place.py  pdf_parser.py  repository_search_tool.py  sde_search.py  set_datetime.py  stac_search.py  stats.py  utils.py  viz.py
docs/: pydantic_ai_base.md  pydantic_ai_base_agent_diagram_full.md  testing_instruction.md
examples/: cmr_care_pydantic.py
ieso_benchmark/: __init__.py  log.py
ieso_w_geoui/: __init__.py  adapter.py  agent.py  core.py  spec.md  start.sh  tools.py  url_parser.py  warm_mcps.py
ieso_w_vlm/: __init__.py  agent.py  start.sh
infra/: README.md  app.py  cdk.context.json  deploy.sh  stack.py
notebooks/: Closed Loop Agent CM1 Workflow.ipynb  Closed Loop Agent Prithvi Workflow.ipynb
scripts/: care_v2_mono.py  serve_care.py
tests/: conftest.py  test_cmr_care_agent.py  test_files.py  test_postgres_backend.py  test_postgres_backend_pure.py
(+189 files in other folders)
