[project]
name = "akd-ext"
version = "0.0.1"
description = "Misc extension to akd-core"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "akd @ git+https://github.com/NASA-IMPACT/accelerated-discovery.git@develop",
    "openai-agents>=0.1.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "deepeval>=3.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["akd_ext*"]
exclude = ["tests*"]
